--- a/src/components/Desktop/Desktop.css
+++ b/src/components/Desktop/Desktop.css
@@ -40,12 +40,10 @@
   cursor: pointer;
   padding: 5px;
   border-radius: 10px;
-  transition: background-color 0.2s;
+  transition: background-color 0.3s ease;
   pointer-events: auto;
   z-index: 2;
 }
-
-
 
 .desktop-icon img {
   width: 60px;
@@ -64,6 +62,10 @@
 @media (hover: hover) and (pointer: fine) {
   .desktop-icon:hover {
     background-color: rgba(255, 255, 255, 0.1);
+  }
+
+  [data-theme="light"] .desktop-icon:hover {
+    background-color: rgba(0, 0, 0, 0.1);
   }
 }
 
