--- a/app/globals.css
+++ b/app/globals.css
@@ -563,3 +563,18 @@ code,
   will-change: background-position;
   transform: translateZ(0);
 }
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+:root {
+  --border: #e0e0e0;
+}
+
+.dark {
+  --border: #333;
+}
